Derive workspace runtime pools from connector data